[package]
name = "sledgedb"
version = "0.1.0"
authors = ["sayden <mariocaster@gmail.com>"]
edition = "2018"
exclude = ["benchmarks", "examples", "scripts"]

[lib]
name = "sledge"
path = "src/lib.rs"

[[bin]]
name = "sledge"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.31.0"
anyhow = "1.0.26"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"
tracing = "0.1.12"
tokio = { version = "0.2", features = ["macros"] }
hyper = { version = "0.13.2", features = ["stream"] }
thiserror = "1.0.11"
bytes = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
http = "0.2.0"
futures = "0.3.4"
lazy_static = "1.4.0"
grok = "1.1"
serde_urlencoded = "0.6.1"
url = "2.1.1"
futures-util = { version = "0.3", default-features = false }

[dependencies.rocksdb]
default-features = false
features = ["lz4"]
version = "0.13.0"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "my_benchmark"
harness = false